--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.7.1"
-structopt = "0.3.26"
+serde_json = "1.0"    # Add serde_json.
+structopt = "0.3"
+
+[dependencies.chrono]
+features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
+version = "0.4"
+
+[dependencies.serde]  # Add serde in its own section.
+features = ["derive"] # We'll need the derive feature.
+version = "1.0"
