--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde_json = "1.0"    # Add serde_json.
 structopt = "0.3"
+home = "0.5.4"
 
 [dependencies.chrono]
 features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
