--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde_json = "1.0"    # Add serde_json.
 structopt = "0.3"
 home = "0.5.4"
 anyhow = "1.0.68"
+ctrlc = "3.2.4"
 
 [dependencies.chrono]
 features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
